[package]
name = "brent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery = "0.8.12"
minijinja = "1"
minijinja-vault = { git = "https://github.com/wseaton/minijinja-vault.git" }
refinery-core = "0.8.12"
anyhow = "1.0.81"

snowflake-api = { git = "https://github.com/wseaton/snowflake-rs.git", branch = "migration-support", features = [
    "refinery",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.2", features = ["derive"] }
ci_info = { version = "0.14.14", features = ["serde"] }


[profile.release]
strip = true
